--- a/client/index.html
+++ b/client/index.html
@@ -14,11 +14,11 @@
     <style>
       * {
         padding: 0;
-        margin: 0px;
-        font-family: "Roboto", sans-serif;
+        margin: 0;
+        font-family: 'Roboto', sans-serif;
       }
     </style>
-    <title>React App</title>
+    <title>Fiverr. | MERN Stack Clone</title>
   </head>
   <body>
     <div id="root"></div>
